Java Marine API release notes
Version @VERSION@ (b@BUILD_ID@)
<http://marineapi.sourceforge.net/>
Copyright (C) 2010-@YEAR@ Kimmo Tuukkanen <ktuukkan@users.sourceforge.net>

Pre-alpha preview release, not to be used in production. Major API changes may
be introduced in future versions. Released on @RELEASE_DATE@.

CHANGES

NEW FEATURES

* Support for HDG, HDM and HDT sentences; the vessel's magnetic/true heading
  and magnetic variation/deviation.
  
* Common interface HeadingSentence for sentences that provide heading.

* Suppport for MWV sentences; wind speed and angle.
 
KNOWN ISSUES
  
 * Position.distanceTo() may not produce correct results.
 